# Vortyx-Launcher

./: GUIDE.md  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: launcher.rs  lib.rs  main.rs
src/app/: background.tsx  frame.tsx  layout.tsx  page.tsx
src/app/auth/: page.tsx
src/app/components/: sidebar.tsx  titlebar.tsx
src/app/components/core/: ConnectionStatus.tsx  RuntimeInitializer.tsx
src/app/components/effects/: SnowEffect.tsx
src/app/components/managers/: BuildImportErrorManager.ts  ErrorManager.tsx  FileManager.ts
src/app/components/ui/: Avatar.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Sheet.tsx  Sidebar.tsx  Skeleton.tsx  Tooltip.tsx
src/app/config/: config.ts
src/app/core/: app.tsx  index.ts  runtime.ts  sidebar.tsx
src/app/css/: app.css
src/app/css/themes/: index.ts
src/app/home/: page.tsx
src/app/home/components/: HomeHeader.tsx
src/app/hooks/: useAuth.ts
src/app/pages/: DonatePage.tsx  DownloadPage.tsx  HomePage.tsx  LeaderboardPage.tsx  LibraryPage.tsx  PlaceholderPage.tsx  ServersPage.tsx  SettingsPage.tsx  ShopPage.tsx
src/app/pages/auth/: login.tsx
src/app/pages/sections/: temporary.ts
src/app/settings/: page.tsx
src/app/shop/: page.tsx
src/app/types/: client.d.ts  pages.d.ts  socket.d.ts  updater.d.ts  user.d.ts
src/app/utils/: Season.ts  build.ts  buildUtils.ts  reactUtils.tsx  utils.ts
src/app/wrappers/: key.ts
src/lib/: configurations.ts
src/lib/axios/: index.ts
src/lib/socket/: index.ts
src/store/: build.ts  general.ts  settings.ts  updater.ts  user.ts
src/styles/: App.css
(+49 files in other folders)
