[package]
name = "sdk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sdk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security"
] }

winapi = { version = "0.3", features = [
    "tlhelp32",
    "winnt",
    "handleapi",
    "memoryapi",
    "processthreadsapi",
    "synchapi",
    "libloaderapi",
    "winbase",
    "securitybaseapi",
    "shellapi"
] }
scopeguard = "1.2"
tauri-plugin-log = "2"
sysinfo = "0.30"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
keyring = "2"
base64 = "0.21"
ed25519-dalek = { version = "2", features = ["rand_core"] }
